Support captcha validation.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "endpoints": {
+    "captcha_get_url": "http://passport.bilibili.com/web/captcha/combine?plat=6",
     "splash_brand_list_url": "http://app.bilibili.com/x/v2/splash/brand/list",
     "video_view_url": "http://api.bilibili.com/x/web-interface/view",
     "video_desc_url": "http://api.bilibili.com/x/web-interface/archive/desc"
