--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "video_desc_url": "http://api.bilibili.com/x/web-interface/archive/desc",
     "video_like_url": "http://api.bilibili.com/x/web-interface/archive/like",
     "video_check_like_url": "http://api.bilibili.com/x/web-interface/archive/has/like",
-    "video_add_coin_url": "http://api.bilibili.com/x/web-interface/coin/add"
+    "video_add_coin_url": "http://api.bilibili.com/x/web-interface/coin/add",
+    "video_check_has_coin_url": "http://api.bilibili.com/x/web-interface/archive/coins"
   }
 }
