Change and check video favorite status.

--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
     "video_like_url": "http://api.bilibili.com/x/web-interface/archive/like",
     "video_check_like_url": "http://api.bilibili.com/x/web-interface/archive/has/like",
     "video_add_coin_url": "http://api.bilibili.com/x/web-interface/coin/add",
-    "video_check_has_coin_url": "http://api.bilibili.com/x/web-interface/archive/coins"
+    "video_check_has_coin_url": "http://api.bilibili.com/x/web-interface/archive/coins",
+    "video_change_fav_url": "http://api.bilibili.com/x/v3/fav/resource/deal"
   }
 }
