Get Video/Audio stream urls.

--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
     "video_check_like_url": "http://api.bilibili.com/x/web-interface/archive/has/like",
     "video_add_coin_url": "http://api.bilibili.com/x/web-interface/coin/add",
     "video_check_has_coin_url": "http://api.bilibili.com/x/web-interface/archive/coins",
-    "video_change_fav_url": "http://api.bilibili.com/x/v3/fav/resource/deal"
+    "video_change_fav_url": "http://api.bilibili.com/x/v3/fav/resource/deal",
+    "stream_get_url": "http://api.bilibili.com/x/player/playurl"
   }
 }
